--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.4",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "firebase": "^12.9.0",
     "nodemailer": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
