feat: Complete cart system and order checkout flow with MongoDB integration
- Implemented full cart system with backend sync
- Added CartContext for global state management
- Created cart page with item management
- Built 4-step checkout flow (cart review, shipping, payment, confirmation)
- Integrated MongoDB for cart and order persistence
- Added order management system (history, details, cancellation)
- Created API endpoints for cart and orders
- Updated profile with cart and order links
- Added responsive design for all new pages
- Implemented guest cart with localStorage fallback
- Added cart merge on user login

Resolves #130

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,25 @@
+# Backend Server Configuration
 PORT=3001
 ADMIN_KEY=your-secret-admin-key-for-export
 
-# Base URL for API (for unsubscribe links in emails)
-# Dev: http://localhost:3001 | Prod: https://your-api-domain.com
-API_URL=http://localhost:3001
+# MongoDB Configuration (MongoDB Atlas or Local)
+# For MongoDB Atlas (Cloud):
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/?appName=appname
+# For Local MongoDB:
+MONGODB_URI=mongodb://localhost:27017/citystyle
 
-# Optional: Real SMTP for production emails
-# If not set, uses Ethereal test inbox (emails visible in server logs)
+# API Configuration
+API_URL=http://localhost:3001
+VITE_API_URL=http://localhost:3001/api
+
+# Firebase Configuration (Frontend)
+VITE_FIREBASE_API_KEY=your_firebase_api_key
+VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your_project_id
+VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+VITE_FIREBASE_APP_ID=your_app_id
+
 # SMTP_HOST=smtp.gmail.com
 # SMTP_PORT=587
 # SMTP_USER=your-email@gmail.com
