--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "optimize-images": "node scripts/optimize-images.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.4",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "firebase": "^12.9.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.2.1",
     "nodemailer": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
