--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "optimize-images": "node scripts/optimize-images.js"
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.4",
